fixed picing alignment and navigation alignment

--- a/01_Fundamentals/eindopdracht/css/sass/components/_cards.scss
+++ b/01_Fundamentals/eindopdracht/css/sass/components/_cards.scss
@@ -57,9 +57,22 @@
   &__price {
     color: $color-accent;
     font-weight: 700;
+    font-size: 2.5rem;
 
     @media screen and (max-width: 450px) {
+      font-size: 2rem;
+    }
+
+    & sup {
+      position: relative;
+      z-index: 0;
+      top: 1.5px;
       font-size: 1.5rem;
+
+      @media screen and (max-width: 450px) {
+        font-size: 1.2rem;
+        top: 1.6px;
+      }
     }
   }
 
