--- a/01_Fundamentals/eindopdracht/css/sass/components/_footer.scss
+++ b/01_Fundamentals/eindopdracht/css/sass/components/_footer.scss
@@ -3,7 +3,6 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   gap: 30px;
   background-color: $color-secondary;
-  border-radius: 20px 20px 0 0;
   border: 0.5px solid $color-border;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   padding: 30px;
