--- a/01_Fundamentals/eindopdracht/css/sass/components/_navigation.scss
+++ b/01_Fundamentals/eindopdracht/css/sass/components/_navigation.scss
@@ -14,7 +14,12 @@ html {
   width: 100%;
   height: 80px;
   position: fixed;
+  z-index: 999;
   top: 0;
+
+  @media screen and (max-width: 450px) {
+    padding: 10px 30px;
+  }
 
   // company logo
 
@@ -123,7 +128,11 @@ html {
     right: 0;
     height: auto;
     width: 100vw;
-    padding-left: 5rem;
+    padding-left: 3rem;
+
+    @media screen and (min-width: 768px) {
+      padding-left: 5rem;
+    }
 
     li:first-child {
       margin-top: 4rem;
