--- a/01_Fundamentals/eindopdracht/css/sass/main.css
+++ b/01_Fundamentals/eindopdracht/css/sass/main.css
@@ -238,7 +238,14 @@ html {
   width: 100%;
   height: 80px;
   position: fixed;
+  z-index: 999;
   top: 0;
+}
+
+@media screen and (max-width: 450px) {
+  .navigation {
+    padding: 10px 30px;
+  }
 }
 
 .navigation__logo {
@@ -360,7 +367,13 @@ html {
   right: 0;
   height: auto;
   width: 100vw;
-  padding-left: 5rem;
+  padding-left: 3rem;
+}
+
+@media screen and (min-width: 768px) {
+  .navigation__trigger:checked ~ .navigation__list {
+    padding-left: 5rem;
+  }
 }
 
 .navigation__trigger:checked ~ .navigation__list li:first-child {
@@ -675,11 +688,26 @@ html {
 .card__price {
   color: #dd5336;
   font-weight: 700;
+  font-size: 2.5rem;
 }
 
 @media screen and (max-width: 450px) {
   .card__price {
-    font-size: 1.5rem;
+    font-size: 2rem;
+  }
+}
+
+.card__price sup {
+  position: relative;
+  z-index: 0;
+  top: 1.5px;
+  font-size: 1.5rem;
+}
+
+@media screen and (max-width: 450px) {
+  .card__price sup {
+    font-size: 1.2rem;
+    top: 1.6px;
   }
 }
 
@@ -706,7 +734,6 @@ html {
       grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   gap: 30px;
   background-color: #2b135c;
-  border-radius: 20px 20px 0 0;
   border: 0.5px solid lightgrey;
   -webkit-box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
           box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
